# videowithalphagen

./: .gitignore  CMakeLists.txt  FindFreeImage.cmake  ProgramOptions.cpp  ProgramOptions.h  README.md  Readme.md  VideoConverter.cpp  VideoConverter.h  controlTemplateTrusty  controlTemplateXenial  main.cpp  make-deb  opencvhelper.cpp  opencvhelper.h  version.h
cmake/Modules/: FindFreeImage.cmake
imgconverter/: CMakeLists.txt
pkg/usr/share/bash-completion/completions/: videowithalphagen
